--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
     <header class="hero">
         <video class="hero-video" autoplay muted loop playsinline poster="https://placehold.co/1920x1080/005ead/FFF">
-            <source src="hero-video.mp4" type="video/mp4">
+            <source src="hero-video-final.mp4" type="video/mp4">
             Vaš pretraživač ne podržava video tag.
         </video>
         <div class="hero-overlay"></div>
