--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <iframe src="https://www.youtube-nocookie.com/embed/pEpY4NOWbYs" title="Featured Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="featured-info">
-                <h3>Problem skrininga u dijagnostici
+                <h3>Problem skrininga u dijagnostici <br>
                     Prof. Lazar Popović</h3>
                 <div class="featured-meta">Dynamo Roche Srbija • 223 pregleda • pre 1 godinu</div>
                 <p class="featured-desc">
@@ -447,4 +447,5 @@
 
 </body>
 </html>
+
 
